added pagination to private plants
