# swagger-output.json
@@ -35,6 +35,9 @@
     },
     {
       "name": "Germination Methods"
+    },
+    {
+      "name": "Stages"
     }
   ],
   "schemes": [
@@ -141,7 +144,7 @@
     "/plants/stages": {
       "get": {
         "tags": [
-          "Plants"
+          "Stages"
         ],
         "description": "",
         "parameters": [
@@ -161,7 +164,7 @@
     "/plants/strains": {
       "get": {
         "tags": [
-          "Plants"
+          "Strains"
         ],
         "description": "",
         "parameters": [
@@ -704,6 +707,9 @@
     },
     "/plants/{plant_id}": {
       "post": {
+        "tags": [
+          "Plants"
+        ],
         "description": "",
         "parameters": [
           {
@@ -730,6 +736,9 @@
     },
     "/plants/public/{plant_id}": {
       "post": {
+        "tags": [
+          "Plants"
+        ],
         "description": "",
         "parameters": [
           {
